--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 PORT = 4000
 DB_CONNECT = mongodb+srv://lalitbarage18092004:lalit123@cluster0.vypve.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET = atharvabhuwadking
+FRONTEND_URL = http://localhost:5173
