--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,4 @@ DB_CONNECT = mongodb+srv://lalitbarage18092004:lalit123@cluster0.vypve.mongodb.n
 JWT_SECRET = atharvabhuwadking
 FRONTEND_URL = http://localhost:5173
 FACULTY_URL = http://localhost:5174
+STUDENT_URL = http://localhost:5175
