--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 PORT = 4000
-DB_CONNECT = mongodb+srv://lalitbarage18092004:lalit123@cluster0.vypve.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET = atharvabhuwadking
+DB_CONNECT = connetion string
+JWT_SECRET = jwttoken
 FRONTEND_URL = http://localhost:5173
 FACULTY_URL = http://localhost:5174
 STUDENT_URL = http://localhost:5175
